# s4_dx7

./: .env  .gitattributes  .gitignore  Makefile  README.md  dataloader_burn_test.py  env.sh  generate.py  netlify.toml  pyproject.toml  scratch.py
dghome/: dagster.yaml
docs/: landing.md
docs/experiment_logs/: experiments.md  s4-dx7-vc-fir-02.md  s4-dx7-vc-fir-03.md
docs/experiment_logs/dataset_visualisations/: multi_voice2voice.md
mamba-chat/: requirements.txt
notebooks/: autotrace.py  data_flow.py  dataloader.py  eda.py  fir_inference.py  fsk_patch_visualisations.py  nx_vis.py  validate_voice_cleaning.py
notebooks/dataloaders/: multi_voice2voice.py  multi_voice2voice_perf.py  single_voice2voice.py
s4/: train.py
s4/configs/: config.yaml
s4/configs/dataset/: dx7.yaml
s4/configs/experiment/audio/: sashimi-dx7-vc-fir-03.yaml  sashimi-dx7-vc-fir.yaml
s4/configs/model/layer/: mamba2.yaml
s4/resume/69/: hydra.txt
s4/src/dataloaders/: audio.py
s4/src/utils/: registry.py
s4_dx7/: utils.py
s4_dx7/lib/: dx7.py  midi.py  render.py
s4_dx7/lib/audio/: __init__.py  digital.py
s4_dx7/lib/data/: audio_data_module.py
s4_dx7/lib/layers/: mamba2.py
s4_dx7/lib/models/: mamba_simple.py  sashmi.py
s4_dx7/lib/s4/: generate.py
s4_dx7/lib/visualistaion/: audio.py  graph_transform_representation.py  utils.py
s4_dx7/lightning/data/: __init__.py  multi_voice_to_voice.py  single_voice_to_voice.py
s4_dx7/notebook/: mel_spec_audio.py
s4_dx7/udf/: __init__.py  digital.py  dx7.py  render.py
s4_dx7_dbt/: dbt_project.yml  profiles.yml
s4_dx7_dbt/macros/: create_schema.sql
s4_dx7_dbt/models/: 4_beat_phrases copy.sql  4_beat_phrases.sql  detailed_notes.sql.TODO  dx7_cartridges.py  melodies.sql  multivoice_dataset.sql  outputs.sql.TODO  phrase_stats.sql  schema.yml  sources.yml  test.py
s4_dx7_dbt/models/dx7_patch/: clean_dx7_voices.sql  distinct_dx7_voices.sql  dx7_voices.sql  fsk_dx7_voices.sql  metadata_dx7_voices.sql  schema.yml
s4_dx7_dbt/models/phrase_stats_sub/: phrase_polyphonies.sql  simple_phrase_stats.sql
