[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project-name"
version = "0.1.0"
description = "Project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.7.4"
dbt-duckdb = "^1.7.0"
ray = "^2.9.0"
pedalboard = "^0.8.7"
mido = "^1.3.2"
tqdm = "^4.66.1"
pydub = "^0.25.1"
pyarrow = "^14.0.2"
pandas = "^2.1.4"
packaging = "^23.2"
torch = "2.1.0"
transformers = "4.35.0"
mamba-ssm = "1.0.1"
accelerate = "0.25.0"
bitsandbytes = "0.41.3"
SciPy = "1.11.4"
